--- a/frontend/src/app/pages/login/login.html
+++ b/frontend/src/app/pages/login/login.html
@@ -25,7 +25,7 @@
         </div>
     }
 
-    <label class="mt-2 font-semibold">Email</label>
+    <label class="mt-2 font-semibold">Contraseña</label>
     <input 
         type="password"
         id="password"
@@ -62,3 +62,4 @@
     </form>
 
 </div>
+
