Continuacion del UserService - Creacion de UserComponent

--- a/frontend/src/app/pages/login/login.html
+++ b/frontend/src/app/pages/login/login.html
@@ -47,9 +47,9 @@
         Ingresar
     </button>
 
-    @if (messageInvalidForm) {
+    @if (invalidFormMessage) {
         <div class="mt-3 p-2 bg-red-200 text-red-800 rounded">
-            {{ messageInvalidForm }}
+            {{ invalidFormMessage }}
         </div>
     }
 
