--- a/frontend/src/app/components/header-component/header-component.html
+++ b/frontend/src/app/components/header-component/header-component.html
@@ -4,9 +4,9 @@
             Blackened Camisetas
         </div>
         <div class="flex ml-auto gap-6 font-semibold">
-            <a class="hover:font-bold" [routerLink]="['/home']" routerLinkActive="router-link-active">Inicio</a>
-            <a class="hover:font-bold" [routerLink]="['/users']" routerLinkActive="router-link-active">Usuarios</a>
-            <a class="hover:font-bold" [routerLink]="['/products']" routerLinkActive="router-link-active">Productos</a>
+            <a class="hover:font-bold" [routerLink]="['/home-admin']" routerLinkActive="router-link-active">Inicio</a>
+            <a class="hover:font-bold" [routerLink]="['/home-admin/users']" routerLinkActive="router-link-active">Usuarios</a>
+            <a class="hover:font-bold" [routerLink]="['/home-admin/products']" routerLinkActive="router-link-active">Productos</a>
             <a class="hover:font-bold" [routerLink]="['/login']" routerLinkActive="router-link-active">Cerrar Sesión</a>
         </div>
     </nav>
