--- a/frontend/src/app/components/user-component/user-component.html
+++ b/frontend/src/app/components/user-component/user-component.html
@@ -1,125 +1,60 @@
-<form
-    [formGroup]="userCreateForm"
-    (ngSubmit)="submitCreateUser()"
-    class="w-full flex flex-col py-8 px-8 bg-white border border-gray-400 rounded-lg"
+<button
+    (click)="onGetCreateForm()"
+    class="flex mt-4 mx-auto px-4 py-2 bg-gray-400 text-white font-semibold border border-gray-600 rounded-lg hover:bg-gray-600 cursor-pointer"    
 >
-    <h2 class="mt-2 text-2xl text-center font-bold">Registro de Usuarios</h2>
+    Crear Usuario
+</button>
 
-    <p class="mt-4 font-semibold">Ingrese los datos del usuario</p>
+@if (getCreateForm) {
+    <app-create-user-form-component (userCreated)="refreshUsers()"></app-create-user-form-component>    
+}
 
-    <label class="mt-4 font-semibold">Email</label>
-    <input 
-        type="email"
-        id="email"
-        formControlName="email"
-        class="mt-1 py-2 px-2 border border-gray-400 rounded-lg"    
-        placeholder="Ingrese el email..."
-    >
-
-    @if (userCreateForm.get('email')?.touched && userCreateForm.get('email')?.invalid) {
-        <div class="text-red-500 text-sm mt-1">
-            El email es obligatorio y debe ser válido
-        </div>
-    }
-
-    <label class="mt-4 font-semibold">Nombre</label>
-    <input 
-        type="text"
-        id="nombre"
-        formControlName="nombre"
-        class="mt-1 py-2 px-2 border border-gray-400 rounded-lg"    
-        placeholder="Ingrese el nombre..."
-    >
-
-    @if (userCreateForm.get('nombre')?.touched && userCreateForm.get('nombre')?.invalid) {
-        <div class="text-red-500 text-sm mt-1">
-            El nombre es obligatorio y debe tener mínimo 3 caracteres
-        </div>
-    }
-
-    <label class="mt-4 font-semibold">Contraseña</label>
-    <input 
-        type="password"
-        id="password"
-        formControlName="password"
-        class="mt-1 py-2 px-2 border border-gray-400 rounded-lg"    
-        placeholder="Ingrese la contraseña..."
-    >
-
-    @if (userCreateForm.get('password')?.touched && userCreateForm.get('password')?.invalid) {
-        <div class="text-red-500 text-sm mt-1">
-            La contraseña es obligatoria y debe tener mínimo 6 caracteres
-        </div>
-    }
-
-    <label class="mt-4 font-semibold">Rol</label>
-    <select 
-        formControlName="role"
-        class="px-4 py-2 border border-gray-400 rounded-lg"
-    >
-        <option value="">-- Selecciona una opción --</option>
-        <option value="superadmin" >superadmin</option>
-        <option value="admin">admin</option>
-    </select>
-
-    @if (userCreateForm.get('role')?.touched && userCreateForm.get('role')?.invalid) {
-        <div class="text-red-500 text-sm mt-1">
-            Debes seleccionar un rol válido
-        </div>
-    }
-
-    <button
-        type="submit"
-        class="w-1/2 mt-4 mx-auto px-4 py-2 bg-gray-400 text-white font-semibold border border-gray-600 rounded-lg hover:bg-gray-600 cursor-pointer"
-    >
-        Registrar
-    </button>
-
-    @if (invalidFormMessage) {
-        <div class="mt-4 p-2 bg-red-200 text-red-800 rounded">
-            {{ invalidFormMessage }}
-        </div>
-    }
-
-    @if (errorMessage) {
-        <div class="mt-4 p-2 bg-red-200 text-red-800 rounded">
-            {{ errorMessage }}
-        </div>
-    }
-
-    @if (successMessage) {
-        <div class="mt-4 p-2 bg-green-200 text-green-800 rounded">
-            {{ successMessage }}
-        </div>
-    }
-
-</form>
 
 <table class="mt-6 w-full border-collapse bg-white shadow-lg rounded-lg overflow-hidden">
     <thead class="bg-gray-900 text-white">
         <tr>
-            <th class="px-6 py-3 text-left">Email</th>
-            <th class="px-6 py-3 text-left">Nombre</th>
-            <th class="px-6 py-3 text-left">Rol</th>
-            <th class="px-6 py-3 text-center">Acciones</th>
+            <th class="border border-black px-6 py-3 text-left">#</th>
+            <th class="border border-black px-6 py-3 text-left">Email</th>
+            <th class="border border-black px-6 py-3 text-left">Nombre</th>
+            <th class="border border-black px-6 py-3 text-left">Rol</th>
+            <th class="border border-black px-6 py-3 text-left">Acciones</th>
         </tr>
     </thead>
 
     <tbody>
-        @for (user of users; track user._id) {
+        @for (user of users; track user._id; let i = $index) {
             <tr class="border-b hover:bg-gray-100 transition">
-                <td class="px-6 py-3">{{ user.email }}</td>
-                <td class="px-6 py-3">{{ user.nombre }}</td>
-                <td class="px-6 py-3 capitalize">{{ user.role }}</td>
+                <td class="border border-black px-6 py-3">{{ i + 1 }}</td>
+                <td class="border border-black px-6 py-3">{{ user.email }}</td>
+                <td class="border border-black px-6 py-3">{{ user.nombre }}</td>
+                <td class="border border-black px-6 py-3">{{ user.role }}</td>
 
-                <td class="px-6 py-3 flex justify-center gap-2">
-                    <button
-                        (click)="submitDeleteUser(user._id)"
-                        class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"
-                    >
-                        <i class="fas fa-trash"></i>
-                        Eliminar
-                    </button>
+                <td class="border border-black px-6 py-3">
+                    <div class="flex justify-center gap-2">
+                        <button
+                            (click)="onGetUpdateForm(user)"
+                            class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"
+                        >
+                            <i class="fas fa-edit"></i>
+                            Editar
+                        </button>
+
+                        <button
+                            (click)="submitDeleteUser(user._id)"
+                            class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"
+                        >
+                            <i class="fas fa-trash"></i>
+                            Eliminar
+                        </button>
+                    </div>
+
+                    @if (getUpdateForm && selectedUser?._id === user._id) {
+                        <app-update-user-form-component
+                            [userToUpdate]="selectedUser"   
+                            (userUpdated)="refreshUsers()"
+                        >
+                        </app-update-user-form-component>
+                    }
                 </td>
             </tr>
         }
