--- a/frontend/src/app/components/user-component/user-component.html
+++ b/frontend/src/app/components/user-component/user-component.html
@@ -33,7 +33,7 @@
                     <div class="flex justify-center gap-2">
                         <button
                             (click)="onGetUpdateForm(user)"
-                            class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"
+                            class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg flex items-center gap-2 cursor-pointer"
                         >
                             <i class="fas fa-edit"></i>
                             Editar
@@ -41,7 +41,7 @@
 
                         <button
                             (click)="submitDeleteUser(user._id)"
-                            class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"
+                            class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg flex items-center gap-2 cursor-pointer"
                         >
                             <i class="fas fa-trash"></i>
                             Eliminar
