Creacion de componentes para el sitio principal y configuraciones de seguridad

--- a/frontend/src/app/components/create-product-form-component/create-product-form-component.html
+++ b/frontend/src/app/components/create-product-form-component/create-product-form-component.html
@@ -58,8 +58,8 @@
         class="px-4 py-2 border border-gray-400 rounded-lg"
     >
         <option value="">-- Selecciona una opción --</option>
-        <option value="superadmin" >Camisetas</option>
-        <option value="admin">Discos</option>
+        <option value="Camisetas" >Camisetas</option>
+        <option value="Discos">Discos</option>
     </select>
 
     @if (productCreateForm.get('categoria')?.touched && productCreateForm.get('categoria')?.invalid) {
