--- a/frontend/src/app/components/update-user-form-component/update-user-form-component.html
+++ b/frontend/src/app/components/update-user-form-component/update-user-form-component.html
@@ -3,7 +3,7 @@
         (ngSubmit)="submitUpdateUser()"
         class="w-full flex flex-col mt-5 py-8 px-8 bg-white border border-gray-400 rounded-lg"
     >
-    <h2 class="mt-2 text-2xl text-center font-bold">Registro de Usuarios</h2>
+    <h2 class="mt-2 text-2xl text-center font-bold">Actualización de Usuarios</h2>
 
     <p class="mt-4 font-semibold">Ingrese los datos del usuario</p>
 
