--- a/frontend/src/app/components/header-component/header-component.html
+++ b/frontend/src/app/components/header-component/header-component.html
@@ -7,7 +7,7 @@
             <a class="hover:font-bold" [routerLink]="['/home-admin']" routerLinkActive="router-link-active">Inicio</a>
             <a class="hover:font-bold" [routerLink]="['/home-admin/users']" routerLinkActive="router-link-active">Usuarios</a>
             <a class="hover:font-bold" [routerLink]="['/home-admin/products']" routerLinkActive="router-link-active">Productos</a>
-            <a class="hover:font-bold" (click)="logout()">Cerrar Sesión</a>
+            <a class="hover:font-bold cursor-pointer" (click)="logout()">Cerrar Sesión</a>
         </div>
     </nav>
 
